--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.5.0
 # to append 'a','b',etc to their subsequent releases, which pamcan
 # misconstrues as alpha, beta, etc.  Bad samba!
 _realver=3.5.0
-pkgrel=1
+pkgrel=2
 arch=(i686 x86_64)
 url="http://www.samba.org"
 license=('GPL3')
@@ -41,7 +41,8 @@ build() {
               --enable-external-libtalloc \
               --disable-dnssd \
               --disable-avahi \
-              --without-libtdb 
+              --with-cifsumount \
+              --enable-external-libtdb
   make || return 1
 }
 
@@ -124,10 +125,11 @@ depends=('db>=4.7' 'popt' 'libcups' 'acl' 'libldap' "smbclient>=$pkgver" 'libcap
       smbtree smbtar nmblookup smbget; do
       rm -f ${pkgdir}/usr/share/man/man1/${man}.1
   done
+  for man in tdbbackup tdbdump tdbtool; do
+      rm -f ${pkgdir}/usr/share/man/man8/${man}.8
+  done
   rm -f ${pkgdir}/usr/share/man/man7/libsmbclient.7
   rm -f ${pkgdir}/usr/include/libsmbclient.h
-  # remove conflict files of tdb
-  rm -f ${pkgdir}/usr/bin/{tdbbackup,tdbdump,tdbtool}
   # copy ldap example
   install -D -m644 ${srcdir}/samba-${_realver}/examples/LDAP/samba.schema ${pkgdir}/usr/share/doc/samba/examples/LDAP/samba.schema
 }
