--- a/qemu-kvm/trunk/PKGBUILD
+++ b/qemu-kvm/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=qemu-kvm
-pkgver=0.12.2
+pkgver=0.12.3
 pkgrel=1
 pkgdesc="Latest KVM QEMU is a generic and open source processor emulator which achieves a good emulation speed by using dynamic translation."
 arch=(i686 x86_64)
@@ -28,6 +28,8 @@ build()
     make DESTDIR=${pkgdir} install || return 1
     # symbolic link for backwards compatibility
     ln -s qemu-system-x86_64 ${pkgdir}/usr/bin/qemu-kvm
+    # symbolic link for to qemu binary for emulator apps
+    ln -s qemu-system-x86_64 ${pkgdir}/usr/bin/qemu
     # fix man page
     mv ${pkgdir}/usr/share/man/man1/qemu.1 \
                      ${pkgdir}/usr/share/man/man1/qemu-kvm.1
@@ -35,5 +37,5 @@ build()
     install -D -m644 ${srcdir}/65-kvm.rules \
                      ${pkgdir}/lib/udev/rules.d/65-kvm.rules
 }
-md5sums=('8e6f3666de038c2ee11cebc45ffa89e4'
+md5sums=('ab484975004f66fb48cb5589bd9b9dcb'
          'b316a066d2f1bb57d8f5b7ea1d0d1caf')
