--- a/k3b/trunk/PKGBUILD
+++ b/k3b/trunk/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: damir <damir@archlinux.org>
 
 pkgname=k3b
-pkgver=1.70.0beta1
-pkgrel=2
+pkgver=1.90.0rc1
+pkgrel=1
 depends=('kdebase-runtime' 'kdemultimedia-kioslave' 'libsamplerate' 'libmad'
          'ffmpeg>=0.5' 'taglib>=1.4' 'libmpcdec>=1.2.5' 'libdvdread>=4.1.3'
-         'cdrdao' 'cdrkit')
+         'cdrdao' 'cdrkit' 'shared-mime-info' 'libxft')
 makedepends=('cmake' 'pkgconfig' 'automoc4' )
 pkgdesc="Feature-rich and easy to handle CD burning application"
 arch=("i686" "x86_64")
@@ -21,15 +21,15 @@ optdepends=('dvd+rw-tools: for dvd burning support'
             'transcode:    for advanced mpeg conversion support'
             'emovix:       for bootable multimedia cd/dvd support')
 options=(!libtool)
-md5sums=('ccfe9c3a59f12707cec3d0c6e5ef78d4')
 
 build() {
   cd ${srcdir}/
   mkdir build
   cd build
-  cmake ../${pkgname}-1.70.0 \
+  cmake ../${pkgname}-1.90.0 \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
 }
+md5sums=('8ebba067980f5c124e10093b582d8a74')
