--- a/wine/trunk/PKGBUILD
+++ b/wine/trunk/PKGBUILD
@@ -3,18 +3,22 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=wine
-pkgver=1.1.39
+pkgver=1.1.40
 pkgrel=1
 pkgdesc="A compatibility layer for running Windows programs"
 url="http://www.winehq.com"
 arch=('i686')
 license=('LGPL')
 depends=('fontconfig' 'libxxf86dga' 'mesa' 'libxcursor' 'libxrandr' 'libxdamage')
-makedepends=('cups' 'sane' 'fontforge' 'flex' 'bison' 'libgphoto2' 'libxinerama' 'esound' 'giflib'  'ncurses' 'libxcomposite' \
-	     'samba' 'libxpm' 'libxmu' 'libxxf86vm' 'perl' 'libxml2' 'jack-audio-connection-kit' 'libxslt' 'libldap' 'lcms')
-optdepends=('cups' 'sane' 'libgphoto2' 'alsa-lib' 'giflib' 'libpng' 'jack-audio-connection-kit' 'libldap' 'lcms')
+makedepends=('cups' 'sane' 'fontforge' 'flex' 'bison' 'libgphoto2' 
+             'libxinerama' 'esound' 'giflib'  'ncurses' 'libxcomposite' 
+             'samba' 'libxpm' 'libxmu' 'libxxf86vm' 'perl' 'libxml2' 'jack' 
+             'libxslt' 'libldap' 'lcms')
+optdepends=('cups' 'sane' 'libgphoto2' 'alsa-lib' 'giflib' 'libpng' 'jack' 
+            'libldap' 'lcms')
 source=(http://ibiblio.org/pub/linux/system/emulators/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('cbde85e50db653f54fe9da34be4a6de5')
+md5sums=('b5111634a170ed5df5733448ccabdb0f')
+
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
