--- a/fltk/trunk/PKGBUILD
+++ b/fltk/trunk/PKGBUILD
@@ -1,27 +1,26 @@
 # $Id$
-# Maintainer: roberto <roberto@archlinux.org>
-# Contributor: Tom Newsom <Jeepster@gmx.co.uk>
-# Updated to produce shared libs: Andrew Rose <ody@netrux.com>
 
 pkgname=fltk
-pkgver=1.1.9
-pkgrel=3
+pkgver=1.1.10
+pkgrel=1
 pkgdesc="Graphical user interface toolkit for X"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
 url="http://www.fltk.org/"
 depends=('libjpeg' 'libpng' 'gcc-libs' 'libxft' 'libxext')
 makedepends=('mesa')
-source=(http://ftp.easysw.com/pub/$pkgname/$pkgver/$pkgname-$pkgver-source.tar.bz2
-        fltk-1.1.9-gcc44.patch)
-md5sums=('e146fd264e1001b1313acfd41ef75552'
-         '954d657d7831bd02aafb0e4ed9c8f8c6')
+source=("http://ftp.easysw.com/pub/$pkgname/$pkgver/$pkgname-$pkgver-source.tar.bz2")
+md5sums=('a1765594bc427ff892e36089fe1fa672')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  patch -Np1 -i $srcdir/fltk-1.1.9-gcc44.patch
-  
+  cd $srcdir/$pkgname-$pkgver
+  export LDFLAGS="${LDFLAGS//-Wl,--as-needed}"
+  export LDFLAGS="${LDFLAGS//,--as-needed}"
   ./configure --prefix=/usr --enable-threads --enable-xft --enable-shared
   make || return 1
-  make DESTDIR=$startdir/pkg install
+}
+
+package() {
+  cd $srcdir/$pkgname-$pkgver
+  make DESTDIR=$pkgdir install
 }
