--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: tobias <tobias@arhlinux.org>
 
 pkgname=exiv2
-pkgver=0.18.2
+pkgver=0.19
 pkgrel=1
 pkgdesc="Exif and Iptc metadata manipulation library and tools."
 arch=('i686' 'x86_64')
@@ -10,12 +10,16 @@ url="http://exiv2.org"
 license=('GPL2')
 depends=('gcc-libs' 'zlib' 'expat')
 options=('!libtool')
-source=(http://www.exiv2.org/${pkgname}-${pkgver}.tar.gz)
-md5sums=('300cc55e098d7ff7560b4c6992282c53')
+source=("http://www.exiv2.org/${pkgname}-${pkgver}.tar.gz")
+md5sums=('f52fb75a2cb7512f1484deab76473e13')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr
   make || return 1
+}
+
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR=${pkgdir} install
 }
