--- a/ttf-dejavu/trunk/PKGBUILD
+++ b/ttf-dejavu/trunk/PKGBUILD
@@ -5,21 +5,25 @@
 
 pkgname=ttf-dejavu
 pkgver=2.30
-pkgrel=1
+pkgrel=2
 pkgdesc="Font family based on the Bitstream Vera Fonts with a wider range of characters"
 arch=('any')
 url="http://dejavu.sourceforge.net/"
 license=('custom')
 depends=('fontconfig' 'xorg-fonts-encodings')
 install=ttf-dejavu.install
-source=(http://downloads.sourceforge.net/project/dejavu/dejavu/$pkgver/dejavu-fonts-ttf-$pkgver.tar.bz2)
+source=(http://downloads.sourceforge.net/project/dejavu/dejavu/${pkgver}/dejavu-fonts-ttf-${pkgver}.tar.bz2)
 md5sums=('545b3bfc69893075a90a7c6e6f4a7e67')
 
 build() {
-  cd "$srcdir/dejavu-fonts-ttf-$pkgver"
+  cd "${srcdir}/dejavu-fonts-ttf-${pkgver}"
 
-  mkdir -p "$pkgdir/usr/share/fonts/TTF" || return 1
-  install -m644 ttf/*.ttf "$pkgdir/usr/share/fonts/TTF" || return 1
+  install -m755 -d "${pkgdir}/usr/share/fonts/TTF"
+  install -m644 ttf/*.ttf "${pkgdir}/usr/share/fonts/TTF/" || return 1
 
-  install -D -m644 LICENSE "$pkgdir/usr/share/licenses/ttf-dejavu/LICENSE" || return 1
+  install -m755 -d "${pkgdir}/etc/fonts/conf.avail"
+  install -m644 fontconfig/*.conf "${pkgdir}/etc/fonts/conf.avail/" || return 1
+
+  install -m755 -d "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -D -m644 LICENSE "$pkgdir/usr/share/licenses/${pkgname}/" || return 1
 }
