--- a/tunepimp/trunk/PKGBUILD
+++ b/tunepimp/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=tunepimp
 pkgver=0.5.3
 pkgrel=7
-pkgdesc="The TunePimp library (also referred to as libtunepimp) is a development library geared towards developers who wish to create MusicBrainz enabled tagging applications"
+pkgdesc="A development library geared towards developers who wish to create MusicBrainz enabled tagging applications (aka libtunepimp)"
 url="http://www.musicbrainz.org/products/tunepimp/"
 arch=('i686' 'x86_64')
 license=('GPL')
