--- a/libmms/trunk/PKGBUILD
+++ b/libmms/trunk/PKGBUILD
@@ -3,19 +3,22 @@
 
 pkgname=libmms
 pkgver=0.5
-pkgrel=1
+pkgrel=2
 pkgdesc="MMS stream protocol library"
 arch=(i686 x86_64)
 url="https://launchpad.net/libmms"
 license=(LGPL)
-depends=('glib2>=2.22.2')
+depends=('glib2>=2.22.4')
 options=('!libtool')
-source=(http://launchpad.net/libmms/trunk/${pkgver}/+download/libmms-${pkgver}.tar.gz)
-md5sums=('cf83053ec891f14e73a04c84d9de08ee')
+source=(http://launchpad.net/libmms/trunk/${pkgver}/+download/libmms-${pkgver}.tar.gz
+        libmms-0.5-this-keyword.patch)
+md5sums=('cf83053ec891f14e73a04c84d9de08ee'
+         '5266259060f5723d8ee639b8a541f835')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -Np1 -i "${srcdir}/libmms-0.5-this-keyword.patch" || return 1
   ./configure --prefix=/usr --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
