--- a/jack/trunk/PKGBUILD
+++ b/jack/trunk/PKGBUILD
@@ -3,7 +3,6 @@
 # Contributor: Robert Emil Berge <robert@rebi.no>
 
 pkgname=jack
-_pkgname=jack-audio-connection-kit
 pkgver=0.118.0
 pkgrel=1
 pkgdesc="A low-latency audio server"
@@ -17,17 +16,17 @@ options=('!libtool')
 provides=("jack-audio-connection-kit=${pkgver}")
 replaces=('jack-audio-connection-kit')
 install=jack.install
-source=(http://jackaudio.org/downloads/${_pkgname}-${pkgver}.tar.gz
+source=(http://jackaudio.org/downloads/jack-audio-connection-kit-${pkgver}.tar.gz
         rc.${pkgname} ${pkgname}.conf)
 
 build() {
-	cd ${srcdir}/${_pkgname}-${pkgver}
+	cd ${srcdir}/jack-audio-connection-kit-${pkgver}
 	./configure --prefix=/usr --libdir=/usr/lib
 	make || return 1
 }
 
 package() {
-	cd ${srcdir}/${_pkgname}-${pkgver}
+	cd ${srcdir}/jack-audio-connection-kit-${pkgver}
 	make DESTDIR=${pkgdir} install
 	install -Dm755 ../rc.${pkgname} ${pkgdir}/etc/rc.d/${pkgname}
 	install -Dm644 ../${pkgname}.conf ${pkgdir}/etc/conf.d/${pkgname}
