--- a/udisks/trunk/PKGBUILD
+++ b/udisks/trunk/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Disk Management Service"
 arch=('i686' 'x86_64')
 url="http://www.freedesktop.org/wiki/Software/udisks"
 license=('GPL')
-depends=('udev>=151' 'sg3_utils>=1.28' 'glib2>=2.23.4' 'dbus-glib>=0.82' 'polkit>=0.96' 'parted>=2.2' 'device-mapper>=2.02.60' 'libatasmart>=0.17')
+depends=('udev>=151' 'sg3_utils>=1.28' 'glib2>=2.23.4' 'dbus-glib>=0.82' 'polkit>=0.96' 'parted>=2.2' 'device-mapper>=2.02.60' 'libatasmart>=0.17' 'lsof')
 options=(!libtool)
 makedepends=('intltool')
 replaces=('devicekit-disks')
