--- a/pdns-recursor/trunk/PKGBUILD
+++ b/pdns-recursor/trunk/PKGBUILD
@@ -2,13 +2,14 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=pdns-recursor
 pkgver=3.1.7.2
-pkgrel=1
+pkgrel=2
 pkgdesc="PowerDNS recursor"
 url="http://www.powerdns.com"
 license=('GPL')
 arch=('i686' 'x86_64')
-depends=('gcc-libs>=4.4.3')
+depends=('gcc-libs>=4.4.3' 'lua')
 makedepends=('boost')
+options=(!makeflags)
 backup=('etc/powerdns/recursor.conf')
 source=(http://downloads.powerdns.com/releases/${pkgname}-${pkgver}.tar.bz2
         pdns-recursor.rc)
@@ -17,8 +18,7 @@ md5sums=('5fdba3612e281bf65c6c9f665673dc4e'
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure || return 1
-  make || return 1
+  LUA=1 LUA_CPPFLAGS_CONFIG= LUA_LIBS_CONFIG=-llua make || return 1
   make DESTDIR="${pkgdir}" install || return 1
   install -d -m755 "${pkgdir}/etc/rc.d"
   mv "${pkgdir}/etc/powerdns/recursor.conf-dist" "${pkgdir}/etc/powerdns/recursor.conf" || return 1
