--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -128,6 +128,8 @@ package_udev() {
   for i in $pkgdir/lib/udev/rules.d/*.rules; do
     sed -i -e 's#GROUP="dialout"#GROUP="uucp"#g' $i
   done
+
+  mv "${pkgdir}/lib/girepository-1.0" "${pkgdir}/usr/lib/" || return 1
 }
 
 package_udev-compat() {
